Fix wordwrap for category titles

--- a/fifty_shades_of_kfc/static/consumer/index/style.css
+++ b/fifty_shades_of_kfc/static/consumer/index/style.css
@@ -42,7 +42,13 @@ body {
 
 .category-card {
     height: 300px;
-    overflow: hidden;
+    overflow: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.category-card::-webkit-scrollbar {
+    display: None;
 }
 
 .card-image {
