--- a/fifty_shades_of_kfc/static/consumer/view_category/style.css
+++ b/fifty_shades_of_kfc/static/consumer/view_category/style.css
@@ -113,3 +113,7 @@ body {
 .language-link, .title-link {
     color: black;
 }
+
+#currentCategory {
+    word-wrap: break-word;
+}
